--- a/techio.yml
+++ b/techio.yml
@@ -9,7 +9,9 @@ plan:
 - title: Exercice 3
   statement: markdowns/ex3_taille.md
 - title: Exercice 4
-  statement: markdowns/ex4_nbrstruct.md
+  statement: markdowns/ex4_ajout.md
+- title: Exercice 5
+  statement: markdowns/ex5_nbrstruct.md
 - title: Exercice xx 	
   statement: markdowns/exDEA1.md
 - title: Exercice xx
